--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js"></script>
 </head>
 
 <body>
+    <script>
+        window.onload = function() {
+            window.RiveScript = RiveScript;
+
+        }
+    </script>
     <app-root></app-root>
 
 </body>
